[package]
name = "customasm"
version = "0.13.0"
edition = "2021"
authors = [
  "hlorenzi <https://hlorenzi.com>",
  "josephabbey <https://joseph.abbey1.org.uk>",
]
description = "An assembler for custom, user-defined instruction sets!"
homepage = "https://github.com/hlorenzi/customasm"
repository = "https://github.com/hlorenzi/customasm"
readme = "README.md"
license = "Apache-2.0"
keywords = ["asm", "assembler", "assembly", "custom"]
categories = ["command-line-utilities", "hardware-support"]
exclude = ["web/*"]
build = "src/build.rs"

[lib]
crate-type = ["lib", "cdylib"]
name = "customasmlib"
path = "src/lib.rs"

[[bin]]
name = "customasm"
path = "src/main.rs"

[dependencies]
getopts = "0.2.21"
num-bigint = { version = "0.4.3", default_features = false }
num-traits = { version = "0.2.15", default_features = false }
num-integer = { version = "0.1.45", default_features = false }

[dev-dependencies]
sha2 = "0.10.5"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitoxide", "cargo"] }
