[package]
name = "customasmlib"
version = "0.13.0"
edition = "2021"
authors = [
  "hlorenzi <https://hlorenzi.com>",
  "josephabbey <https://josephabbey.dev>",
]
description = "An assembler/disassembler for custom, user-defined instruction sets!"
homepage = "https://github.com/JosephAbbey/customasm"
repository = "https://github.com/JosephAbbey/customasm"
readme = "README.md"
license = "Apache-2.0"
keywords = ["asm", "assembler", "assembly", "custom"]
categories = ["command-line-utilities", "hardware-support"]
exclude = ["web/*"]
build = "src/build.rs"

[lib]
crate-type = ["lib", "cdylib"]
name = "customasmlib"
path = "src/lib.rs"

[[bin]]
name = "customasm"
path = "src/main.rs"

[dependencies]
getopts = "0.2.21"
num-bigint = { version = "0.4.3", default_features = false }
num-traits = { version = "0.2.16", default_features = false }
num-integer = { version = "0.1.45", default_features = false }

[dev-dependencies]
sha2 = "0.10.7"

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "git", "gitoxide", "cargo"] }
