[package]
name = "customasm"
version = "0.13.9"
edition = "2021"
authors = ["hlorenzi <https://hlorenzi.com>"]
description = "An assembler for custom, user-defined instruction sets!"
homepage = "https://github.com/hlorenzi/customasm"
repository = "https://github.com/hlorenzi/customasm"
readme = "README.md"
license = "Apache-2.0"
keywords = ["asm", "assembler", "assembly", "custom"]
categories = ["command-line-utilities", "hardware-support"]
exclude = ["web/*"]
build = "src/build.rs"

[lib]
crate-type = ["lib", "cdylib"]
name = "customasm"
path = "src/lib.rs"

[[bin]]
name = "customasm"
path = "src/main.rs"

[dependencies]
getopts = "0.2.17"
num-bigint = "0.4"

[dev-dependencies]
sha2 = "0.9.1"

[build-dependencies]
vergen = "3.1.0"